changed attractions and added divvy

--- a/fieldMuseum.html
+++ b/fieldMuseum.html
@@ -22,8 +22,7 @@
     <h2 style="text-align: center;"> Field Museum </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">The Field Museum of Natural History, also known as The Field Museum, is a natural history museum in 
-            Chicago, Illinois, and is one of the largest such museums in the world.</p>
+        <p style="padding-bottom: 5px;">About</p>
         
 
         <h4>Costs:</h4>
