--- a/homepage.html
+++ b/homepage.html
@@ -51,7 +51,7 @@
       <label>Millenium Park</label>
     </div>
     <div class = "lpz" style = "display: inline-block;  text-align: center;">
-      <button type = "button" id = "LPZ" class="btn" onclick="location.href='linkinParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
+      <button type = "button" id = "LPZ" class="btn" onclick="location.href='#';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
       <br>
       <label>Lincoln Park Zoo</label>
     </div>
