--- a/millenium.html
+++ b/millenium.html
@@ -22,8 +22,7 @@
     <h2 style="text-align: center;"> Millenium Park </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">A 5 million Gallon aquarium, Shedd Aquarium is an indoor public aquarium, 
-            filled with thriving aquatic life for unforgettably amazing encounters.</p>
+        <p style="padding-bottom: 5px;">About</p>
         
 
         <h4>Costs: </h4>
