--- a/transportation.html
+++ b/transportation.html
@@ -39,7 +39,7 @@
         <br>
 
         <div class = "viewMore" style = "padding-left: 200px;">
-            <button type = "button" id = "Divvy" class="btn" style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <button type = "button" id = "Divvy" class="btn" onclick="location.href='divvy.html';"  style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
             <span style = "padding: 40px;">
                 <p style = "font-size: 30px;">Divvy: Bicycle sharing system found in the metropolitan area of Chicago</p>
             </span>
