--- a/attractions.html
+++ b/attractions.html
@@ -50,12 +50,12 @@
         <h4 style = "text-align: center;"> Other Popular Attractions</h4>
         <div class= "button-center">
             <div class = "lpz" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "LPZ" class="btn" onclick="location.href='linkinParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "LPZ" class="btn" onclick="location.href='#'" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Lincoln Park <br> Zoo</label>
             </div>
             <div class = "wtp" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "WTP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/unnamed\ \(1\).jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "WTP" class="btn" onclick="location.href='waterTower.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/unnamed\ \(1\).jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Water Tower <br> Place</label>
             </div>
