--- a/millenium.html
+++ b/millenium.html
@@ -22,7 +22,7 @@
     <h2 style="text-align: center;"> Millenium Park </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">About</p>
+        <p style="padding-bottom: 5px;">Millennium Park is a public park located in the Loop community area of Chicago in Illinois operated by the Chicago Department of Cultural Affairs and managed by MB Real Estate.</p>
         
 
         <h4>Costs: </h4>
