small changes made

--- a/fieldMuseum.html
+++ b/fieldMuseum.html
@@ -22,8 +22,7 @@
     <h2 style="text-align: center;"> Field Museum </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">The Field Museum of Natural History, also known as The Field Museum, is a natural history museum in 
-          Chicago, Illinois, and is one of the largest such museums in the world.</p>
+        <p style="padding-bottom: 5px;"></p>
         
 
         <h4>Costs:</h4>
@@ -60,7 +59,7 @@
 
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
-        <a href="https://www.fieldmuseum.org/join-give/become-member" target="_blank">Field Museum Membership Page</a>
+       
         <br>
         <h5>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status.</p>
