--- a/waterTower.html
+++ b/waterTower.html
@@ -22,9 +22,7 @@
     <h2 style="text-align: center;"> Water Tower Place </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">Water Tower Place is a large urban, mixed-use development comprising a 758,000 sq ft shopping mall, hotel, theater, 
-            and condominiums in a 74-story skyscraper in Chicago, Illinois, United States. 
-            The mall is located at 835 North Michigan Avenue, along the Magnificent Mile.</p>
+        <p style="padding-bottom: 5px;"></p>
 
 
         <h4>Hours: </h4>
@@ -35,94 +33,11 @@
         <br>
 
         <h4>Stores:</h4>
-        <p>Aldo,
-            American Eagle Outfitters,
-            American Girl,
-            Ann Taylor,
-            Aritzia,
-            Auntie Anne's Pretzels,
-            Banana Republic,
-            bareMinerals,
-            bebe,
-            Billabong,
-            Campus Colors,
-            Candyality,
-            CHIARoScURO,
-            Chicago Cubs Clubhouse Shop,
-            Chico's,
-            Claire's,
-            Clarks,
-            Coach,
-            Crumbs Bake Shop,
-            Cuadra,
-            cur8ed,
-            CUSP,
-            Eileen Fisher,
-            Express,
-            Finish Line,
-            Foodease,
-            foodlife,
-            Forever 21,
-            Fossil,
-            Francesca's Collections,
-            Free People,
-            freshii,
-            Godiva Chocolatier,
-            Henri Bendel,
-            Hollister Co.,
-            Hotels, Restaurants & Eateries,
-            iFixandRepair,
-            J. Jill,
-            Kiva,
-            Lacoste,
-            Landau,
-            Lids,
-            Local Charm,
-            lucy,
-            M Burger,
-            Macy's,
-            Macy's Taste Bar,
-            Me-Ality,
-            Michael Hill Jeweler,
-            Mity Nice,
-            Nine West,
-            Oakley,
-            OroGold,
-            Pandora,
-            Papyrus,
-            Pepper Palace,
-            PINK,
-            Red Mango,
-            Rogers & Hollands Jewelers,
-            S.A. Elite Sports Authority,
-            Sacred Grounds Bakery & Café,
-            Seacret Spa,
-            SEE Eyewear,
-            Sephora,
-            SoHo,
-            Soma Intimates,
-            Spoil Me Kidz Boutique,
-            Sprint - Wireless Evolution,
-            Sunglass Hut,
-            Swarovski,
-            T-Mobile,
-            Teavana,
-            The Body Shop,
-            The LEGO Store,
-            The Limited,
-            The Walking Company,
-            Tourneau,
-            TUMI,
-            Vera Bradley,
-            Victoria's Secret,
-            Wet Seal,
-            White House | Black Market,
-            Wow Bao</p>
+       
 
 
         <h5>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">Water Tower complies with all state and local mandates related to COVID-19, including but not limited to reduced capacity, dining restrictions, and face coverings (where applicable).<br>
-             These restrictions are the most up-to-date and take precedence over the industry-specific guidelines if there are points of contradiction.</p>
+        <p style="padding-bottom: 5px;"></p>
 
 
         <h4>Location:</h4>
