--- a/attractions.html
+++ b/attractions.html
@@ -35,7 +35,7 @@
                 <label>Shedd Aquarium</label>
             </div>
             <div class = "fm" style = "display: inline-block;  text-align: center;"> 
-                <button type = "button" id = "FM" class="btn" onclick="location.href='fieldMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Field Museum</label>
             </div>
