--- a/childrensMuseum.html
+++ b/childrensMuseum.html
@@ -22,7 +22,7 @@
     <h2 style="text-align: center;"> Children's Museum </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">The Chicago Children's Museum is located at Navy Pier in Chicago, Illinois. It was founded in 1982 by The Junior League of Chicago who were responding to programming cutbacks in the Chicago Public Schools.</p>
+        <p style="padding-bottom: 5px;"></p>
         
 
         <h4>Costs:</h4>
@@ -36,7 +36,7 @@
         
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
-        <a href="https://www.chicagochildrensmuseum.org/become-a-member" target="_blank">Children's Museum Membership Page</a>
+
         <br>
         <h5>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status.</p>
