added costs for divvy

--- a/divvy.html
+++ b/divvy.html
@@ -25,6 +25,10 @@
         <p style="padding-bottom: 5px;">About</p>
         
         <h4>Costs </h4>
+        <p>Single Ride: $3.30/Ride (Up to 30 minutes) <br>
+            Day Pass: $15/Day <br>
+            Annual Pass: $9/Month <br>
+           </p>
 
         <h4>How to Ride with Divvy:</h4>
         <br>
