--- a/attractions.html
+++ b/attractions.html
@@ -35,7 +35,7 @@
                 <label>Shedd Aquarium</label>
             </div>
             <div class = "fm" style = "display: inline-block;  text-align: center;"> 
-                <button type = "button" id = "FM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "FM" class="btn" onclick="location.href='fieldMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Field Museum</label>
             </div>
@@ -50,7 +50,7 @@
         <h4 style = "text-align: center;"> Other Popular Attractions</h4>
         <div class= "button-center">
             <div class = "lpz" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "LPZ" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "LPZ" class="btn" onclick="location.href='lincolnParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Lincoln Park <br> Zoo</label>
             </div>
@@ -60,34 +60,34 @@
                 <label>Water Tower <br> Place</label>
             </div>
             <div class = "msi" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "MSI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "MSI" class="btn" onclick="location.href='MSI.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Museum of Science <br> and Industry</label>
             </div>
             <div class = "bf" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "BF" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "BF" class="btn" onclick="location.href='bFountain.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Buckingham <br> Fountain</label>
         </div>
         <br>
         <div class= "button-center">
             <div class = "cm" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "CM" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <button type = "button" id = "CM" class="btn" onclick="location.href='childrensMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label>Children's <br> Museum</label>
             </div>
             <div class = "np" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "NP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/navyPier.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "NP" class="btn" onclick="location.href='navyPier.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/navyPier.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Navy Pier<br> Waterfront</label>
             </div>
             <div class = "ap" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "AP" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/adler.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+                <button type = "button" id = "AP" class="btn" onclick="location.href='adlerPlanetarium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/adler.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Adler <br> Planetarium</label>
             </div>
             <div class = "ai" style = "display: inline-block;  text-align: center;">
-                <button type = "button" id = "AI" class="btn" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/art.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <button type = "button" id = "AI" class="btn" onclick="location.href='artInstitute.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/art.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label>Chicago Art <br> Institute</label>
             </div>
