--- a/parking.html
+++ b/parking.html
@@ -11,7 +11,7 @@
         
         <br>
         <div id="banner">
-          <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" onclick="location.href='homepage.html';">
+          <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" title = "Chocolate Disco Chicago Tourism Homepage" onclick="location.href='homepage.html';">
         </div>
 
          <br>
@@ -28,10 +28,10 @@
                 <button type ="button" id="generalRules " class="btn" onclick="location.href='parking.html';" style="width: 130px; height: 50px; font-size: 15px;"> General Rules </button>
                 <button type ="button" id="typesOfParking" class="btn" onclick="location.href='#';" style="width: 140px; height: 50px; font-size: 15px"> Types of Parking </button>
                 <button type ="button" id="spotHero" class="btn" onclick="location.href='spotHero.html';" style="width: 130px; height: 50px; font-size: 15px;"> SpotHero </button>
+                <br>
+                <br>
+                <h4>General Parking Rules for Chicago</h4>
             </div>
-
-            <br>
-            <h4 style="padding-left: 635px;">General Parking</h4>
             <ul style="padding-left: 400px;">
                 <li>Don't park more than 12 in from the curb</li>
             
