--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
     <br>
   
     <div id="banner">
-      <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" onclick="location.href='homepage.html';">
+      <img src="pictures/banner3.jpg" alt="mainpage banner" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
     </div>
 
     <br>
