--- a/spotHero.html
+++ b/spotHero.html
@@ -11,7 +11,7 @@
         
         <br>
         <div id="banner">
-          <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" onclick="location.href='homepage.html';">
+          <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center"  title = "Chocolate Disco Chicago Tourism Homepage" onclick="location.href='homepage.html';">
         </div>
 
          <br>
