added information for adler planitarium and field museum

--- a/adlerPlanetarium.html
+++ b/adlerPlanetarium.html
@@ -22,14 +22,50 @@
     <h2 style="text-align: center;"> Adler Planetarium </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">About Info</p>
+        <p style="padding-bottom: 5px;">Founded in 1930 by Max Adler, the Adler Planetarium is a public museum built to be dedicated to the study of atrophysics and astronomy, and is Chicago's first planetarium</p>
         
 
         <h4>Costs:</h4>
-        <p></p>
+        <table style="width: 75%;">
+            <tr>
+              <th> </th>
+              <th>Museum <br> Entry</th>
+              <th>Museum <br> Entry +1</th>
+              <th>Museum <br> Entry +2</th>
+              <th>Unlimited</th>
+            </tr>
+            <tr class = "spaceUnder">
+              <td>Adult</td>
+              <td>$19 </td>
+              <td>$28 </td>
+              <td>$35 </td>
+              <td>$50 </td>
+            </tr>
+            <tr>
+              <td>Children (3-11)</td>
+              <td>$8 </td>
+              <td>$17 </td>
+              <td>$24 </td>
+              <td>$39 </td>
+            </tr>
+          </table>
+          <br>
         <br>
-
-        <h5>Covid Guidelines:</h4>
+        <h4>Memberships:</h5>
+            <p>Thinking about becoming a member? Here are some of the benefits: </p>
+            <ul>
+                <li>Unlimited free admssion and sky show tickets</li>
+                <li>15% Discound at the Space Shop</li>
+                <li>10% Discount at the Cosmic Cafe</li>
+                <li>50% Discount on Adler After Dark tickets</li>
+                <li>And more!</li>
+            </ul>
+            <p>Memberships start at $60 for one Adult for one year (Individual) and go up to $240 for one year (Family & Friends), with benefits varying by membership </p>
+            <a href = "https://www.adlerplanetarium.org/support/memberships/"> For more information about Memberships, click here!</a>
+            <br>
+            <br>
+            <br>
+        <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">The Adler Planetarium is currently closed due to Covid. However, the Planetarium plans on reopening in March 2022!</p>
         
 
@@ -38,6 +74,9 @@
         <div class="gmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.2645831771792!2d-87.60913420717107!3d41.86671472421451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2b6fb7b114b5%3A0x6920a3aa12218ea6!2sAdler%20Planetarium!5e0!3m2!1sen!2sus!4v1637018657150!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <p style="padding-left: 20px; padding-top: 150px; font-size: 20px;">
+                Hours of Operation: 9:30 AM - 4 PM
+                <br>
+                 Monday through Sunday
                 <br>
                 <br> 
                 1300 S Lake Shore Dr
