--- a/fieldMuseum.html
+++ b/fieldMuseum.html
@@ -34,13 +34,13 @@
               <th>Illinois Residents</th>
               <th>Chicago Residents</th>
             </tr>
-            <tr>
+            <tr class = "spaceUnder">
               <td>All-Access Pass</td>
               <td>$40 </td>
               <td>$38</td>
               <td>$32</td>
             </tr>
-            <tr>
+            <tr class = "spaceUnder">
               <td>Discovery Pass</td>
               <td>$34</td>
               <td>$32</td>
@@ -59,10 +59,24 @@
 
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
-       
+        <ul>
+          <li>Unlimited Basic admission</li>
+          <li>Free admission to ticketed exhibitions</li>
+          <li>Discounts on 3D Movies for each member</li>
+          <li>10% Discount at Stores and Restaurants</li>
+          <li>And more!</li>
+      </ul>
+        <p> Memberships start at $75 for one year (Digital) and go up to $171 for one year (Family Plus), with benefits varying by membership.
+          <br>
+          The Field Museum also offers membershipt benefits for the Discovery Circle ($250 to $2,499) and the Founders' Council ($2,500+).
+        </p>
+        <a href = "https://www.fieldmuseum.org/join-give/become-member"> For more information about Memberships, click here!</a>
         <br>
-        <h5>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status.</p>
+        <br>
+        <br>
+        <h4>Covid Guidelines:</h4>
+        <p style="padding-bottom: 5px;">All visitors over the age of two are required to wear face masks regardless of vaccination status.
+        <br> Masks may be removed in designated eating and drinking areas.</p>
         
 
 
