--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -35,7 +35,7 @@
               <th>Chicago Residents</th>
               <th>Shedd Members</th>
             </tr>
-            <tr>
+            <tr class = "spaceUnder">
               <td>Adult</td>
               <td>$39.95 </td>
               <td>$19.95</td>
@@ -53,7 +53,8 @@
                 <td>$4.95</td>
                 <td>$2.95</td>
               </tr>
-          </table><br>
+          </table>
+          <br>
           
           <p>Members and Children under 3 are free!
         </p><br>
@@ -67,9 +68,12 @@
             <li>10% Discount Shedd Aquarium's online store!</li>
         </ul>
         <p> Memberships start at $750 (Supporter) and go up to $1,000 (Ambassador), with benefits varying by membership </p>
-
+        <a href = "https://www.sheddaquarium.org/membership_plans"> For more information about Memberships, click here!</a>
+        <br>
+        <br>
+        <br>
         <h5>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status</p>
+        <p style="padding-bottom: 5px;">All visitors over the age of two are required to wear face masks regardless of vaccination status</p>
         
 
 
