added spot hero and other things, played around with cosmetics

--- a/MSI.html
+++ b/MSI.html
@@ -31,9 +31,11 @@
         
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
+        <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank"></a>
+
 
         <br>
-        <h5>Covid Guidelines:</h4>
+        <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;"></p>
         
 
