--- a/artInstitute.html
+++ b/artInstitute.html
@@ -30,9 +30,10 @@
         
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
+        <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank"></a>
 
         <br>
-        <h5>Covid Guidelines:</h4>
+        <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;"></p>
         
 
@@ -43,7 +44,7 @@
             <p style="padding-left: 20px; padding-top: 150px; font-size: 20px;">
                 Hours of Operation: 11 AM - 6 PM
                 <br>
-                 Thursday through Monday
+                Thursday through Monday
                 <br>
                 Closed Tuesday and Wednesday
                 <br>
