--- a/bFountain.html
+++ b/bFountain.html
@@ -22,14 +22,14 @@
     <h2 style="text-align: center;"> Buckingham Memorial Fountain </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;"></p>
+        <p style="padding-bottom: 5px;">One of the largest Fountains in the world, Buckingham Memorial Fountain is located in Grant Park. Dedicated to Clarence Buckingham, the fountain produces major water displays for 20 minutes every hour!</p>
         
 
         <h4>Costs:</h4>
-        <p>Millenium Park is free for all to enjoy!</p>
+        <p>Buckingham Fountain is free for all to enjoy!</p>
         <br>
 
-        <h5>Covid Guidelines:</h4>
+        <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">Covid Guidelines are set by the CDC as followed: <br>
                                         Visitors who are vaccinated are not required to wear masks <br>
                                         Visitors who are unvaccinated are required to wear face masks in outdoor and crowded environments </p>
