--- a/childrensMuseum.html
+++ b/childrensMuseum.html
@@ -36,9 +36,10 @@
         
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
+        <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank">link</a>
 
         <br>
-        <h5>Covid Guidelines:</h4>
+        <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status.</p>
         
 
