--- a/fieldMuseum.html
+++ b/fieldMuseum.html
@@ -22,7 +22,7 @@
     <h2 style="text-align: center;"> Field Museum </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;"></p>
+        <p style="padding-bottom: 5px;">One of the largest Natural History Museums in the world, Chicago's Field Musuem, named after benefactor Marshall Field, first opened in 1894 and is filled with over 40 million artifacts and natural wonders.</p>
         
 
         <h4>Costs:</h4>
@@ -70,7 +70,7 @@
           <br>
           The Field Museum also offers membershipt benefits for the Discovery Circle ($250 to $2,499) and the Founders' Council ($2,500+).
         </p>
-        <a href = "https://www.fieldmuseum.org/join-give/become-member"> For more information about Memberships, click here!</a>
+        <a href = "https://www.fieldmuseum.org/join-give/become-member" target="_blank"> For more information about Memberships, click here!</a>
         <br>
         <br>
         <br>
