--- a/homepage.html
+++ b/homepage.html
@@ -24,13 +24,15 @@
     <br>
     
     <div class= "button-center">
-      <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
+      <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(31, 42, 59)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> Attractions </button>
       <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
       <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
     </div>
     <br>
     <img src="pictures/skyline.jpg" alt="mainpage skyline" class = "center">
     <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Above to Learn More!</p>
+    <br>
+    <h5 style = "text-align: center;">Covid Guidelines for Chicago? MAYBE REMOVE?</h5>
     <br>
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
 
@@ -64,36 +66,36 @@
 
     <p style = "padding-left: 5px;"> Step 1: Choose your Attractions </p>
     <div class= "viewMore">
-      <button type ="button" id="VMA" class="btn" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <button type ="button" id="VMA" class="btn" onclick="location.href='attractions.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
       <span style = "padding: 15px;">
         <p>Chicago is full of fun attractions, including Sears Towers, Sedd Aquarium, and more! </p>
       </span>
     </div>
 
     <!-- <br> -->
-    <hr style="background-color: rgb(25, 25, 121); height: .5px">
+    <hr style="background-color: rgb(111, 148, 204); height: .5px">
 
     <p style = "padding-left: 5px;"> Step 2: Figure out Transportation within the City </p>
     <div class= "viewMore">
-      <button type ="button" id="VMT" class="btn" style = "width: 120px; height:50px; vertical-align: middle;  margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <button type ="button" id="VMT" class="btn" onclick="location.href='transportation.html';" style = "width: 120px; height:50px; vertical-align: middle;  margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
       <span style = "padding: 15px;">
         <p> Chicago has several forms of inner city travel! </p>
       </span>
     </div>
 
    <!-- <br> -->
-    <hr style="background-color: rgb(25, 25, 121); height: .5px">
+    <hr style="background-color:rgb(111, 148, 204); height: .5px">
 
     <p style = "padding-left: 5px;"> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
-      <button type ="button" id="VMP" class="btn" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <button type ="button" id="VMP" class="btn" onclick="location.href='parking.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
       <span style = "padding: 15px;">
       <p> Driving to Chicago? Make sure you know about parking! </p>
       </span>
     </div>
 
     <!-- <br> -->
-    <hr style="background-color: rgb(25, 25, 121); height: .5px">
+    <hr style="background-color: rgb(111, 148, 204); height: .5px">
 
     <p style = "padding-left: 5px;">Step 4: Covid Guidelines</p>
     <p style = "padding-left: 15px;"> In Chicago, masks may be required for most indoor areas regardless of vaccination status, but those who are vaccinated do not need to wear masks outdoors </p>
