--- a/searsTower.html
+++ b/searsTower.html
@@ -40,9 +40,8 @@
         <div class="gmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30639.048300504415!2d-87.6554890462532!3d41.872478212615796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2cbee269fbbb%3A0x10f6dce5eb88c7d!2sWillis%20Tower!5e0!3m2!1sen!2sus!4v1635904921765!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  
             <p style="padding-left: 20px; padding-top: 150px; font-size: 20px;">
-                Hours of Operation: 9 AM - 10 PM
-                <br>
-                 Monday through Sunday
+                Hours of Operation:<br>
+                9 AM - 10 PM Monday through Sunday
                 <br>
                 <br> 
                 223 S Wacker Dr <br>
