--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -68,11 +68,11 @@
             <li>10% Discount Shedd Aquarium's online store!</li>
         </ul>
         <p> Memberships start at $750 (Supporter) and go up to $1,000 (Ambassador), with benefits varying by membership </p>
-        <a href = "https://www.sheddaquarium.org/membership_plans"> For more information about Memberships, click here!</a>
+        <a href = "https://www.sheddaquarium.org/membership_plans" target="_blank"> For more information about Memberships, click here!</a>
         <br>
         <br>
         <br>
-        <h5>Covid Guidelines:</h4>
+        <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">All visitors over the age of two are required to wear face masks regardless of vaccination status</p>
         
 
