--- a/spotHero.html
+++ b/spotHero.html
@@ -23,15 +23,41 @@
         <br>
         <h2 style="text-align: center;"> SpotHero </h2>
 
-        <div style = "padding-left: 350px; padding-bottom: 50px;">
+        <div style="padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
             <br>
             <h4>About:</h4> 
-            <p style="padding-bottom: 5px;">About spotHero</p>
+            <p style="padding-bottom: 5px;">SpotHero is a digital parking marketplace that allows users to reserve and pay for parking spaces in lots, garages, and valet servcies</p>
 
             <br>
 
-            <h4>How To use SpotHero</h4>
-            <a href = "https://spothero.com/">Link to SpotHero Main Website</a>
+            <h4>How To Use SpotHero:</h4>
+            <br>
+            <h5>How to use the SpotHero Website:</h5>
+            <ol>
+                <li> Select your type of parking from Hourly, Monthly, and Airport</li>
+                <li> Enter your location, or select "Find Parking Near Me"</li>
+                <li> Add any necessary information, like enter and exit time</li>
+                <li> Scroll through and find the best parking option for you, and select "Book Now"</li>
+                <li> Enter your email  and continue as a guest, or sign in or create and acount for reservation details</li>
+                <li> Review your reservation details, and enter in your phone number, along with the make and model of your car</li>
+                <li> Enter your payment method, and to finish, tap "Pay and Reserve"</li>
+                <li> All details and passes for your reservation will be emailed to you, so scan the provided QR code while entering and exiting the parking area for access</li>
+            </ol>
+            <br>
+            <h5>How to use the SpotHero App:</h5>
+            <ol>
+                <li> Sign in, Create and account, or continue as a guest</li>
+                <li> Enter your Address, Venue, or Airport</li>
+                <li> Select your type of parking from Hourly, Monthly, and Airport</li>
+                <li> Enter the start and end times for parking</li>
+                <li> Scroll through and select bubbles to find the best parking option for you, and select "Book Now"</li>
+                <li> Select "Checkout" to continue to payment</li>
+                <li> Review your reservation details, and enter in your phone number, along with the make and model of your car</li>
+                <li> Enter your payment method, and to finish, tap "Reserve Spot"</li>
+                <li> To access your reservation, open up the "Reservations" Tab and select your reservation, and scan the QR code while entering and exiting the parking area for access</li>
+
+            </ol>
+            <a href = "https://spothero.com/" target = "_blank">Link to SpotHero Main Website</a>
         </div>
     </body>
 </html>
