--- a/adlerPlanetarium.html
+++ b/adlerPlanetarium.html
@@ -61,7 +61,7 @@
                 <li>And more!</li>
             </ul>
             <p>Memberships start at $60 for one Adult for one year (Individual) and go up to $240 for one year (Family & Friends), with benefits varying by membership </p>
-            <a href = "https://www.adlerplanetarium.org/support/memberships/"> For more information about Memberships, click here!</a>
+            <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank"> For more information about Memberships, click here!</a>
             <br>
             <br>
             <br>
