--- a/waterTower.html
+++ b/waterTower.html
@@ -22,30 +22,42 @@
     <h2 style="text-align: center;"> Water Tower Place </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;"></p>
-
-
-        <h4>Hours: </h4>
-        <p>Sunday: 12pm - 6 pm<br>
-        Monday - Thursday: 11am - 7pm<br>
-        Friday - Saturday: 11am - 8pm</p>
+        <p style="padding-bottom: 5px;">Water Tower Place contains a shopping mall, hotel, theater, and comndominiums in its 74 story tall skyscraper.</p>
 
         <br>
 
         <h4>Stores:</h4>
-       
+        <p>Water Tower Place Mall has 110 stores, including: </p>
+        <ul>
+            <li>Adidas</li>
+            <li>Aeropostale</li>
+            <li>American Girl</li>
+            <li>Bath & Body Works</li>
+            <li>Forever 21</li> 
+            <li>Garrett Popcorn Shops</li>
+            <li>Lego</li>
+            <li>Sephora</li>
+            <li>And more!</li>
+        </ul>
+        <a href = "https://www.shopwatertower.com/en/directory/" target="_blank"> For a full list of Stores, Hours, and Locations within the mall, click here!</a>
+        <br>
+        <br>
 
 
-        <h5>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;"></p>
-
+        <h4>Covid Guidelines:</h4>
+        <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status</p>
 
         <h4>Location:</h4>
         <div class="gmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.764093274251!2d-87.62508138455827!3d41.89793027922055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd35383aa0379%3A0xe132dc09c888b814!2sWater%20Tower%20Place!5e0!3m2!1sen!2sus!4v1636148536835!5m2!1sen!2sus" 
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <p style="padding-left: 20px; padding-top: 150px; font-size: 20px;">
+                Hours of Operation:<br> 
+                11 AM - 7 PM Monday - Thursday <br>
+                11 AM - 8 PM Friday and Saturday <br>
+                12 PM - 6 PM Sunday
                 <br> 
+                <br>
                 835 Michigan Ave
                 <br>
                 Chicago, IL 60611               
