--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
   </head>
 
 
-  <body>
+  <body style="background-image:url('pictures/background5.jpg');background-position: 0px 0px; background-repeat: no-repeat;background-size: 100% 100%;">
 
     <br>
   
@@ -88,7 +88,7 @@
 
     <p style = "padding-left: 5px;"> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
-      <button type ="button" id="VMP" class="btn" onclick="location.href='parking.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <button type ="button" id="VMP" class="btn" onclick="location.href='parking.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background-color: rgb(111, 148, 204); color: white;"> View More </button>
       <span style = "padding: 15px;">
       <p> Driving to Chicago? Make sure you know about parking! </p>
       </span>
