--- a/searsTower.html
+++ b/searsTower.html
@@ -6,7 +6,7 @@
     "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css">
     <link rel="stylesheet" href="homepage.css">
 </head>
-<body>
+<body style="background-image:url('pictures/background5.jpg');background-position: 0px 0px; background-repeat: no-repeat;background-size: 100% 100%;"> 
     <br>
     <div id="banner">
       <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center"  title = "Chocolate Disco Chicago Tourism Homepage" onclick="location.href='homepage.html';">
