--- a/spotHero.html
+++ b/spotHero.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="homepage.css">
 
     </head>
-    <body>
+    <body style="background-image:url('pictures/background5.jpg');background-position: 0px 0px; background-repeat: no-repeat;background-size: 100% 100%;">
         
         <br>
         <div id="banner">
