added app links for uber/lyft/spothero

--- a/spotHero.html
+++ b/spotHero.html
@@ -58,6 +58,12 @@
 
             </ol>
             <a href = "https://spothero.com/" target = "_blank">Link to SpotHero Main Website</a>
+            <div>
+                <p style = "display: inline-block">SpotHero App:</p>
+                <a href="https://apps.apple.com/us/app/spothero-1-rated-parking-app/id499097243" target="_blank">Apple Store</a>
+                <p style = "display: inline-block"> | </p>
+                <a href="https://play.google.com/store/apps/details?id=com.spothero.spothero&hl=en_US&gl=US" target="_blank">Google Play Store</a>
+            </div>
         </div>
     </body>
 </html>
