--- a/uberLyft.html
+++ b/uberLyft.html
@@ -20,7 +20,7 @@
     </div>
     <br>
     <h2 style="text-align: center;"> Uber and Lyft </h2>   
-    <div style = "padding-left: 350px; padding-bottom: 50px;">
+    <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
         <p style="padding-bottom: 5px;">Ride Hailing and Sharing throughout Chicago</p>
         
@@ -45,6 +45,13 @@
             <li>Tap 'Confirm' to shecdule your ride!</li>
         </ol>
         <a href="https://www.uber.com/" target="_blank">Uber Main Website</a>
+        <div>
+            <p style = "display: inline-block">Uber App:</p>
+            <a href="https://apps.apple.com/us/app/uber-request-a-ride/id368677368" target="_blank">Apple Store</a>
+            <p style = "display: inline-block"> | </p>
+            <a href="https://play.google.com/store/apps/details?id=com.ubercab&hl=en_US&gl=US" target="_blank">Google Play Store</a>
+        </div>
+
         <br>
         <br>
         <h5>Steps to Ride with Lyft:</h5>
@@ -56,6 +63,12 @@
             <li>Tap 'Schedule' to schedule your ride!</li>
         </ol>
         <a href="https://www.lyft.com/" target="_blank">Lyft Main Website</a>
+        <div>
+            <p style = "display: inline-block">Lyft App:</p>
+            <a href = "https://apps.apple.com/us/app/lyft/id529379082">Apple Store</a>
+            <p style = "display: inline-block"> | </p>
+            <a href="https://play.google.com/store/apps/details?id=me.lyft.android&hl=en_US&gl=US" target="_blank">Google Play Store</a>
+        </div>
 
         <br>
 
