changed padding to make attractions page more even

--- a/attractions.html
+++ b/attractions.html
@@ -23,23 +23,23 @@
         <h2 style="text-align: center;"> Attractions </h2>
         <br>
         <h4 style="text-align: center;"> Recommendations</h3>
-        <div class= "button-center" >
-            <div class = "sears" style = "display: inline-block;  text-align: center;"> 
+        <div class= "button-center">
+            <div class = "sears" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;"> 
                 <button type = "button" id = "Sears" class="btn" onclick="location.href='searsTower.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Sears\ Tower.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label> Sears Tower</label>
             </div>
-            <div class = "shedd" style = "display: inline-block;  text-align: center;"> 
+            <div class = "shedd" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;"> 
                 <button type = "button" id = "Shedd" class="btn" onclick="location.href='sheddAquarium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label>Shedd Aquarium</label>
             </div>
-            <div class = "fm" style = "display: inline-block;  text-align: center;"> 
+            <div class = "fm" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;"> 
                 <button type = "button" id = "FM" class="btn" onclick="location.href='fieldMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Field Museum</label>
             </div>
-            <div class = "mp" style = "display: inline-block;  text-align: center;"> 
+            <div class = "mp" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;"> 
                 <button type = "button" id = "MP" class="btn" onclick="location.href='millenium.html';"  style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label>Millenium Park</label>
@@ -49,44 +49,44 @@
         <br>
         <h4 style = "text-align: center;"> Other Popular Attractions</h4>
         <div class= "button-center">
-            <div class = "lpz" style = "display: inline-block;  text-align: center;">
+            <div class = "lpz" style = "display: inline-block;  text-align: center; padding-left: 15px; padding-right: 25px;">
                 <button type = "button" id = "LPZ" class="btn" onclick="location.href='lincolnParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Lincoln Park <br> Zoo</label>
             </div>
-            <div class = "wtp" style = "display: inline-block;  text-align: center;">
+            <div class = "wtp" style = "display: inline-block;  text-align: center; padding-left: 15px; padding-right: 13px;">
                 <button type = "button" id = "WTP" class="btn" onclick="location.href='waterTower.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/unnamed\ \(1\).jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Water Tower <br> Place</label>
             </div>
-            <div class = "msi" style = "display: inline-block;  text-align: center;">
+            <div class = "msi" style = "display: inline-block;  text-align: center; padding-left: 15px; padding-right: 14px;">
                 <button type = "button" id = "MSI" class="btn" onclick="location.href='MSI.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/msi.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Museum of Science <br> and Industry</label>
             </div>
-            <div class = "bf" style = "display: inline-block;  text-align: center;">
+            <div class = "bf" style = "display: inline-block;  text-align: center; padding-left: 14px; padding-right: 15px;">
                 <button type = "button" id = "BF" class="btn" onclick="location.href='bFountain.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/buckingham.jpg'); background-size: cover; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Buckingham <br> Fountain</label>
         </div>
         <br>
         <div class= "button-center">
-            <div class = "cm" style = "display: inline-block;  text-align: center;">
+            <div class = "cm" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;">
                 <button type = "button" id = "CM" class="btn" onclick="location.href='childrensMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Chicago_Children_s_Museum_-_color_logo.png'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label>Children's <br> Museum</label>
             </div>
-            <div class = "np" style = "display: inline-block;  text-align: center;">
+            <div class = "np" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;">
                 <button type = "button" id = "NP" class="btn" onclick="location.href='navyPier.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/navyPier.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Navy Pier<br> Waterfront</label>
             </div>
-            <div class = "ap" style = "display: inline-block;  text-align: center;">
+            <div class = "ap" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;">
                 <button type = "button" id = "AP" class="btn" onclick="location.href='adlerPlanetarium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/adler.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
                 <br>
                 <label>Adler <br> Planetarium</label>
             </div>
-            <div class = "ai" style = "display: inline-block;  text-align: center;">
+            <div class = "ai" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;">
                 <button type = "button" id = "AI" class="btn" onclick="location.href='artInstitute.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/art.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
                 <br>
                 <label>Chicago Art <br> Institute</label>
