--- a/homepage.html
+++ b/homepage.html
@@ -37,22 +37,22 @@
     <p style="text-align: center;">Not sure where to visit? Check out these Popular Places in Chicago! </p>
 
     <div class= "button-center">
-      <div class = "fm" style = "display: inline-block;  text-align: center;"> 
+      <div class = "fm" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;"> 
         <button type = "button" id = "FM" class="btn" onclick="location.href='fieldMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
         <br>
         <label>Field Museum</label>
     </div>
-    <div class = "shedd" style = "display: inline-block;  text-align: center;"> 
+    <div class = "shedd" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;"> 
       <button type = "button" id = "Shedd" class="btn" onclick="location.href='sheddAquarium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
       <br>
       <label>Shedd Aquarium</label>
     </div>
-    <div class = "mp" style = "display: inline-block;  text-align: center;"> 
+    <div class = "mp" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;"> 
       <button type = "button" id = "MP" class="btn" onclick="location.href='millenium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
       <br>
       <label>Millenium Park</label>
     </div>
-    <div class = "lpz" style = "display: inline-block;  text-align: center;">
+    <div class = "lpz" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;">
       <button type = "button" id = "LPZ" class="btn" onclick="location.href='lincolnParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
       <br>
       <label>Lincoln Park Zoo</label>
