--- a/attractions.html
+++ b/attractions.html
@@ -25,7 +25,7 @@
         <h4 style="text-align: center;"> Recommendations</h3>
         <div class= "button-center">
             <div class = "sears" style = "display: inline-block;  text-align: center; padding-left: 20px; padding-right: 20px;"> 
-                <button type = "button" id = "Sears" class="btn" onclick="location.href='searsTower.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Sears\ Tower.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+                <button type = "button" id = "Sears" class="btn" onclick="location.href='searsTower.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Sears\ Tower.jpg'); background-size: 100%; background-repeat: no-repeat; border: 1px solid rgb(75, 99, 134)"> </button>
                 <br>
                 <label> Sears Tower</label>
             </div>
