--- a/parking.html
+++ b/parking.html
@@ -27,7 +27,7 @@
         <div class= "button-center">
                 <button type ="button" id="generalRules " class="btn" onclick="location.href='parking.html';" style="width: 130px; height: 50px; font-size: 15px;"> General Rules </button>
                 <button type ="button" id="typesOfParking" class="btn" onclick="location.href='#';" style="width: 140px; height: 50px; font-size: 15px"> Types of Parking </button>
-                <button type ="button" id="spotHero" class="btn" onclick="location.href='spotHero.html';" style="width: 130px; height: 50px; font-size: 15px;"> SpotHero </button>
+                <button type ="button" id="spotHero" class="btn" onclick="location.href='spotHero.html';" style="width: 130px; height: 50px; font-size: 15px;"> SpotHero App </button>
                 <br>
                 <br>
                 <h4>General Parking Rules for Chicago</h4>
