--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -62,10 +62,11 @@
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here are some of the benefits: </p>
         <ul>
-            <li>40% Discount on 4-D Experiences!</li>
+            <li>40% Discount on 4-D Experiences</li>
             <li>10% Discount in all Shedd Gift Shops</li>
             <li>10% Discount at all Shedd Restaurants</li>
-            <li>10% Discount Shedd Aquarium's online store!</li>
+            <li>10% Discount Shedd Aquarium's online store</li>
+            <li>And More!</li>
         </ul>
         <p> Memberships start at $750 (Supporter) and go up to $1,000 (Ambassador), with benefits varying by membership </p>
         <a href = "https://www.sheddaquarium.org/membership_plans" target="_blank"> For more information about Memberships, click here!</a>
