testing out banner sizes

--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,13 @@
     <br>
   
     <div id="banner">
-      <img src="pictures/banner3.jpg" alt="mainpage banner" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
+
+      <img src="pictures/banner3.jpg" alt="mainpage banner"  title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
+      <br>
+      <img src="pictures/bannerCopy.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
+      <br>
+      <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
+
     </div>
 
     <br>
